Project1-Optimize-Prime/project-one-v1.1/force-app/main/default/objects/Mail__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Shows the information for package.</description>
    <inlineHelpText>Where the item goes.</inlineHelpText>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Mail</relationshipLabel>
    <relationshipName>Mail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>