Project1-Optimize-Prime/project-one-v1.1/force-app/main/default/objects/Mail__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance</label>
    <type>Checkbox</type>
</CustomField>