Project1-Optimize-Prime/project-one-v1.1/force-app/main/default/objects/Mail__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>