Project1-Optimize-Prime/project-one-v1.1/force-app/main/default/objects/Mail__c/fields/Package_Value__c.field-meta.xml
<CustomField>
    <fullName>Package_Value__c</fullName>
    <label>Package Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>