Project1-Optimize-Prime/project-one-v1.1/force-app/main/default/objects/Mail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Insurance__c</columns>
    <columns>Address__c</columns>
    <columns>Delivery_Status__c</columns>
    <columns>Fragile__c</columns>
    <columns>Number_of_Packages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>